feat(docs): update docs

--- a/src/data-provider/docs/api.docs.mdx
+++ b/src/data-provider/docs/api.docs.mdx
@@ -2,6 +2,8 @@
 
 `createProvider` and `createSafeProvider` wrap async functions in a chainable, mockable, type-safe API.
 
+→ [Usage Guide](usage.docs.mdx)
+
 ```ts
 import { createProvider, createSafeProvider } from 'data-provider/data-provider';
 ```
