--- a/src/mock/docs/api.docs.mdx
+++ b/src/mock/docs/api.docs.mdx
@@ -2,6 +2,8 @@
 
 Utilities for managing mock state and simulating async operations. Works in browser, SSR, and Node environments.
 
+→ [Usage Guide](usage.docs.mdx)
+
 ```ts
 import { isMockEnabled, enableMock, disableMock, delay, STORE_KEYS } from 'data-provider/mock';
 ```
