feat(docs): update docs

--- a/src/data-provider/docs/api.docs.mdx
+++ b/src/data-provider/docs/api.docs.mdx
@@ -5,7 +5,7 @@
 → [Usage Guide](usage.docs.mdx)
 
 ```ts
-import { createProvider, createSafeProvider } from 'data-provider/data-provider';
+import { createProvider, createSafeProvider } from '@rstackio/services/data-provider';
 ```
 
 ---
