--- a/src/logger/docs/api.docs.mdx
+++ b/src/logger/docs/api.docs.mdx
@@ -3,7 +3,7 @@
 A lightweight logger with color-coded output, module prefixes, and automatic silencing in production.
 
 ```ts
-import { Logger } from 'data-provider/logger';
+import { Logger } from '@rstackio/services/logger';
 ```
 
 ---
