--- a/src/mock/docs/api.docs.mdx
+++ b/src/mock/docs/api.docs.mdx
@@ -5,7 +5,7 @@ Utilities for managing mock state and simulating async operations. Works in brow
 → [Usage Guide](usage.docs.mdx)
 
 ```ts
-import { isMockEnabled, enableMock, disableMock, delay, STORE_KEYS } from 'data-provider/mock';
+import { isMockEnabled, enableMock, disableMock, delay, STORE_KEYS } from '@rstackio/services/mock';
 ```
 
 ---
