--- a/src/safe/docs/api.docs.mdx
+++ b/src/safe/docs/api.docs.mdx
@@ -3,7 +3,7 @@
 `safe` wraps any function — sync or async — and returns a `[error, data]` tuple instead of throwing.
 
 ```ts
-import { safe } from 'data-provider/safe';
+import { safe } from '@rstackio/services/safe';
 ```
 
 ---
